--- a/Documents/Reversi/src/server/CMakeLists.txt
+++ b/Documents/Reversi/src/server/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_CXX_STANDARD 11)
 set(SOURCE_FILES
         main.cpp
         Server.cpp
-        Server.h)
+        Server.h
+        Command.h
+        StartGame.h
+        StartGame.cpp)
 
 add_executable(main ${SOURCE_FILES})
