--- a/Documents/Reversi/src/server/makefile
+++ b/Documents/Reversi/src/server/makefile
@@ -1,14 +1,5 @@
-#Name: Hadar Amira
-#ID: 207026527
-#Name: zvi liebskind 
-#ID: 305798752
-
-server.out: compileAll
-	g++ *.o -o ../../exe/server.out
-	rm -f *.o
-
-compileAll: *.h *.cpp
-	    g++ -c *.cpp
-
+a.out: main.cpp Server.cpp
+	g++ main.cpp Server.cpp
+	./a.out
 run:
-	./server.out 
+	./a.out
