--- a/Documents/Reversi/src/server/makefile
+++ b/Documents/Reversi/src/server/makefile
@@ -1,9 +1,9 @@
 ReversiGame.out: compileAll
-	g++ *.o -pthread -o ./ReversiGame.out
+	g++ *.o -pthread -o ./server.out
 	rm -f *.o
 
 compileAll: *.h *.cpp
 	    g++ -c -pthread *.cpp
 
 run:
-	./ReversiGame.out 
+	./server.out 
