--- a/Documents/Reversi/src/client/makefile
+++ b/Documents/Reversi/src/client/makefile
@@ -1,9 +1,14 @@
+#Name: zvi liebskind  
+#ID:305798752  
+#Name: Hadar Amira 
+#ID: 207026527 
+
 ReversiGame.out: compileAll
-	g++ *.o -pthread -o ./ReversiGame.out
+	g++ *.o -o ../../exe/client.out -pthread
 	rm -f *.o
 
 compileAll: *.h *.cpp
-	    g++ -c -pthread *.cpp
+	    g++ -c *.cpp
 
 run:
-	./ReversiGame.out 
+	./ReversiGame.out
